--- a/style.css
+++ b/style.css
@@ -2,25 +2,30 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    --background-color: rgb(243, 243, 243);
+    --background-color: rgb(46, 46, 46);
     --default-font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
     background-color: var(--background-color);
-    height: 100vh;
-    padding: 40px;
     font-family: var(--default-font-family);
+    display: grid;
+    grid-template-rows: 1fr 5fr;
+    align-items: start;
+    height: 100vh;
 }
 
 form {
     background-color: white;
-    border-radius: 8px;
-    box-shadow: 2px 2px 2px lightgray;
+    border-radius: 14px;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 20px;
     padding: 20px 20px 40px;
+}
+
+label {
+    font-weight: bold;
 }
 
 input {
@@ -34,23 +39,113 @@ form > div {
 }
 
 form input[type='text'] {
-    font-size: 0.8rem;
-    padding: 4px;
-}
-
-button {
-    background-color: red;
-    border: none;
-    border-radius: 4px;
-    color: white;
+    background-color: transparent;
+    border: 1px solid gray;
+    border-radius: 8px;
     font-size: 1rem;
-    font-weight: bold;
-    padding: 6px 14px;
+    padding: 8px;
 }
 
-.container {
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
+}
+
+.header > h1 {
+    color: white;
+    font-family: 'Press Start 2P', 'sans-serif';
+}
+
+.fa-basketball {
+    color: orange;
+    font-size: 3rem;
+}
+
+.rotate {
+    animation: rotate 3s ease-in-out infinite;
+}
+
+@keyframes rotate {
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.content-container {
+    height: 100%;
+}
+
+.content {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     justify-items: center;
+    align-items: start;
     gap: 30px;
+    height: 100%;
+}
+
+.form-container {
+    display: flex;
+    gap: 40px;
+}
+
+#compare-stats {
+    background-color: rgb(60 118 187);
+    border: none;
+    border-radius: 14px;
+    color: white;
+    font-family: 'Press Start 2P', 'sans-serif';
+    font-size: 1.2rem;
+    font-weight: bold;
+    padding: 20px 30px;
+    transition: 0.1s ease-in-out;
+}
+
+#compare-stats:hover {
+    background-color: rgb(27, 68, 117);
+    cursor: pointer;
+}
+
+.card-container {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    opacity: 0;
+}
+
+.stat-card-border {
+    background-color: rgb(60 118 187);
+    border: none;
+    border-radius: 14px;
+    overflow: hidden;
+}
+
+.stat-card {
+    display: grid;
+    grid-template-columns: repeat(2, fit-content(35px));
+    grid-template-rows: 110px 45px;
+    align-items: center;
+    gap: 10px;
+    background-color: white;
+    margin-left: 10px;
+    padding: 30px 14px;
+    height: 100%;
+}
+
+.stat-card > img,
+.stat-card > h3 {
+    grid-column: 1 / 3;
+}
+
+.stat-card > img {
+    border-radius: 50%;
+    width: 150px;
+    height: auto;
+}
+
+.stat-card > h3 {
+    text-align: center;
 }
