--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ form input[type='text'] {
 .card-container {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 40px;
     opacity: 0;
 }
@@ -148,4 +149,11 @@ form input[type='text'] {
 
 .stat-card > h3 {
     text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+    .form-container,
+    .card-container {
+        flex-direction: column;
+    }
 }
