--- a/style.css
+++ b/style.css
@@ -156,4 +156,13 @@ form input[type='text'] {
     .card-container {
         flex-direction: column;
     }
+
+    .stat-card {
+        grid-template-columns: repeat(3, fit-content(35px));
+    }
+
+    .stat-card > img,
+    .stat-card > h3 {
+        grid-column: 1 / 4;
+    }
 }
