--- a/style.css
+++ b/style.css
@@ -50,7 +50,8 @@ form input[type='text'] {
     color: rgb(66, 66, 66);
 }
 
-form input[type='text'] {
+form input[type='text'],
+form select {
     background-color: transparent;
     border: 1px solid lightgray;
     border-radius: 8px;
@@ -156,7 +157,7 @@ input:focus-visible {
 .card-container {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     gap: 40px;
     opacity: 0;
 }
@@ -181,7 +182,9 @@ input:focus-visible {
 }
 
 .stat-card > img,
-.stat-card > h3 {
+.stat-card > h3,
+.stat-card > h4,
+.stat-card > h5 {
     grid-column: 1 / 3;
 }
 
@@ -192,6 +195,11 @@ input:focus-visible {
 }
 
 .stat-card > h3 {
+    align-self: end;
+}
+
+.stat-card > h3,
+.stat-card > h5 {
     text-align: center;
 }
 
