--- a/style.css
+++ b/style.css
@@ -204,14 +204,13 @@ input:focus-visible {
 }
 
 @media only screen and (max-width: 600px) {
-    html,
     body {
+        grid-template-rows: none;
         min-height: -webkit-fill-available;
     }
 
     .content {
-        align-items: start;
-        gap: 0px;
+        gap: 14px;
     }
 
     .form-container {
