--- a/style.css
+++ b/style.css
@@ -6,18 +6,6 @@
     --default-font-family: Arial, Helvetica, sans-serif;
 }
 
-body {
-    /* background: url('https://i.pinimg.com/originals/7e/43/a5/7e43a5bf4d0d80ddb0139d39e89d468b.gif'); */
-    background: linear-gradient(-45deg, #000000, #3f3f3f, #131430, #0d1b27);
-    background-size: 400% 400%;
-    animation: gradient 10s ease infinite;
-    font-family: var(--default-font-family);
-    display: grid;
-    grid-template-rows: 1fr 5fr;
-    align-items: start;
-    min-height: 100vh;
-}
-
 @keyframes gradient {
     0% {
         background-position: 0% 50%;
@@ -28,6 +16,18 @@ body {
     100% {
         background-position: 0% 50%;
     }
+}
+
+body {
+    /* background: url('https://i.pinimg.com/originals/7e/43/a5/7e43a5bf4d0d80ddb0139d39e89d468b.gif'); */
+    background: linear-gradient(-45deg, #000000, #3f3f3f, #131430, #0d1b27);
+    background-size: 400% 400%;
+    animation: gradient 10s ease infinite;
+    font-family: var(--default-font-family);
+    display: grid;
+    grid-template-rows: 1fr 5fr;
+    align-items: start;
+    min-height: 100vh;
 }
 
 form {
@@ -76,6 +76,10 @@ input:focus-visible {
     outline: none;
 }
 
+.content.no-display {
+    display: none;
+}
+
 .header {
     display: flex;
     flex-direction: column;
@@ -121,6 +125,9 @@ input:focus-visible {
 }
 
 .content-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     height: 100%;
 }
 
@@ -137,7 +144,8 @@ input:focus-visible {
     gap: 40px;
 }
 
-#compare-stats {
+#compare-stats,
+#return-home {
     background-color: rgb(60 118 187);
     border: none;
     border-radius: 14px;
@@ -149,7 +157,8 @@ input:focus-visible {
     transition: 0.1s ease-in-out;
 }
 
-#compare-stats:hover {
+#compare-stats:hover,
+#return-home:hover {
     background-color: rgb(27, 68, 117);
     cursor: pointer;
 }
@@ -199,8 +208,14 @@ input:focus-visible {
 }
 
 .stat-card > h3,
+.stat-card > h4,
 .stat-card > h5 {
     text-align: center;
+}
+
+#return-home {
+    align-self: center;
+    opacity: 0;
 }
 
 @media only screen and (max-width: 600px) {
